[package]
name = "controller"
version = "0.1.0"
authors = ["Russell Hay <russell.hay@gmail.com>"]

[dependencies]
clippy = { version = "*", optional = true }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_cors = "~0.2"
bitflags = "~1.0"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serial = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
